--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "astro": "^4.16.8",
     "@astrojs/check": "^0.9.4",
     "typescript": "^5.6.3"
+  },
+  "devDependencies": {
+    "fluid-tailwind": "1.0.3"
   }
 }
