--- a/package.json
+++ b/package.json
@@ -17,24 +17,22 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
-    "@astrojs/tailwind": "^5.1.2",
-    "@astrojs/vercel": "^7.8.2",
-    "astro": "^4.16.8",
-    "astro-font": "0.1.81",
+    "@tailwindcss/vite": "^4.0.8",
+    "astro": "^5.3.0",
+    "astro-font": "1.0.0",
     "astro-seo": "0.8.4",
-    "tailwindcss": "^3.4.14",
+    "tailwindcss": "^4.0.8",
     "toastify-js": "1.12.0",
-    "typescript": "^5.6.3"
+    "typescript": "^5.7.3"
   },
   "devDependencies": {
     "@shrutibalasa/tailwind-grid-auto-fit": "1.1.0",
     "@types/toastify-js": "1.12.3",
     "clsx": "2.1.1",
-    "fluid-tailwind": "1.0.3",
-    "lucide-astro": "0.454.0",
-    "prettier": "3.3.3",
+    "lucide-astro": "0.473.0",
+    "prettier": "3.5.2",
     "prettier-plugin-astro": "0.14.1",
-    "prettier-plugin-tailwindcss": "0.6.8",
-    "tailwind-merge": "2.5.4"
+    "prettier-plugin-tailwindcss": "0.6.11",
+    "tailwind-merge": "3.0.1"
   }
 }
