--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
+    "@astrojs/cloudflare": "^12.2.3",
     "@tailwindcss/vite": "^4.0.8",
     "astro": "^5.3.0",
     "astro-font": "1.0.0",
