--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": {
     "name": "Maxcoding",
     "email": "marcos291198@gmail.com",
-    "url": "https://maxcoding.pro"
+    "url": "https://maxcoding.pages.dev"
   },
   "scripts": {
     "dev": "astro dev",
@@ -16,24 +16,24 @@
     "format": "prettier --write ."
   },
   "dependencies": {
-    "@astrojs/check": "^0.9.4",
-    "@astrojs/cloudflare": "^12.2.3",
-    "@tailwindcss/vite": "^4.0.8",
-    "astro": "^5.3.0",
+    "@astrojs/check": "0.9.4",
+    "@astrojs/cloudflare": "12.2.3",
+    "@tailwindcss/vite": "4.0.12",
+    "astro": "5.4.2",
     "astro-font": "1.0.0",
     "astro-seo": "0.8.4",
-    "tailwindcss": "^4.0.8",
+    "tailwindcss": "4.0.12",
     "toastify-js": "1.12.0",
-    "typescript": "^5.7.3"
+    "typescript": "5.8.2"
   },
   "devDependencies": {
     "@shrutibalasa/tailwind-grid-auto-fit": "1.1.0",
     "@types/toastify-js": "1.12.3",
     "clsx": "2.1.1",
-    "lucide-astro": "0.473.0",
-    "prettier": "3.5.2",
+    "lucide-astro": "0.479.0",
+    "prettier": "3.5.3",
     "prettier-plugin-astro": "0.14.1",
     "prettier-plugin-tailwindcss": "0.6.11",
-    "tailwind-merge": "3.0.1"
+    "tailwind-merge": "3.0.2"
   }
 }
