--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "dependencies": {
     "@astrojs/check": "0.9.4",
-    "@astrojs/cloudflare": "12.2.3",
+    "@astrojs/vercel": "^8.1.1",
     "@tailwindcss/vite": "4.0.12",
     "astro": "5.4.2",
     "astro-font": "1.0.0",
